@@ -4,6 +4,9 @@ Release date: dd-mmm-2002
 
 Core and builtins
 
+- Fixed a bug with a continue inside a try block and a yield in the
+  finally clause.  [SF bug 567538]
+
 - Cycles going through the __class__ link of a new-style instance are
   now detected by the garbage collector.
 
